--- a/src/assets/styles/utils/_mixins.scss
+++ b/src/assets/styles/utils/_mixins.scss
@@ -1,16 +1,17 @@
 @mixin main-button {
-  width: 90%;
+  width: 80%;
   height: 30%;
+  min-height: 60px;
   color: $white;
   font-style: normal;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 20px;
   line-height: 36px;
   letter-spacing: 0.04em;
   text-transform: uppercase;
 
   @include onTablet() {
-    width: 80%;
+    width: 70%;
     height: 9vh;
     font-size: 36px;
   }
