--- a/src/assets/styles/utils/_components.scss
+++ b/src/assets/styles/utils/_components.scss
@@ -44,3 +44,19 @@
 .c-portal {
   @include portal;
 }
+
+.c-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 10px;
+  padding: 20px 0 120px;
+
+  @include moreThanTablet {
+    gap: 20px;
+  }
+
+  &__card {
+    flex: 0 1 calc(25% - 1em);
+  }
+}
